@@ -3,13 +3,29 @@
 ********************************************************************
 
 INDICATOR is the name of the indicator desired eg. MACD
+
 NAME is the variable name of the output
-INPUT is the input data
+
+INPUT is the input data. This can be either a previously created indicator or bar data as follows:
+
+    "Open" the open value of the bar
+    "High" the high value of the bar
+    "Low" the low value of the bar
+    "Close" the close value of the bar
+    "Volume" the volume value of the bar
+    "OI" the open interest value of the bar
+
+
 MA_TYPE is the Moving Average type desired. See MA below for a list of types.
+
 PERIOD is a integer value
+
 DEVIATION is a decimal value
+
 PENETRATION is a decimal value
+
 COLOR is a desired color eg. red, blue
+
 VALUE is any numerical value integer or decimal
 
 OPERATOR is a comparison operator. They are:
@@ -26,173 +42,255 @@ OPERATOR is a comparison operator. They are:
 
 *************************************************************************************
 
-ACOS = INDICATOR,NAME,INPUT
+Vector Trigonometric ACos
+  ACOS = INDICATOR,NAME,INPUT
 
-AD = INDICATOR,NAME
+Chaikin A/D Line
+  AD = INDICATOR,NAME
 
-ADOSC = INDICATOR,NAME,FAST_PERIOD,SLOW_PERIOD
+Chaikin A/D Oscillator
+  ADOSC = INDICATOR,NAME,FAST_PERIOD,SLOW_PERIOD
 
-ADD = INDICATOR,NAME,INPUT_1,INPUT_2
+Vector Arithmetic Add
+  ADD = INDICATOR,NAME,INPUT_1,INPUT_2
 
-ADX = INDICATOR,NAME,PERIOD
+Average Directional Movement Index
+  ADX = INDICATOR,NAME,PERIOD
 
-ADXR = INDICATOR,NAME,PERIOD
+Average Directional Movement Index Rating
+  ADXR = INDICATOR,NAME,PERIOD
 
-APO = INDICATOR,NAME,INPUT,FAST_PERIOD,SLOW_PERIOD,MA_TYPE
+Absolute Price Oscillator
+  APO = INDICATOR,NAME,INPUT,FAST_PERIOD,SLOW_PERIOD,MA_TYPE
 
-AROON = INDICATOR,DOWN_NAME,UP_NAME,PERIOD
+Aroon
+  AROON = INDICATOR,DOWN_NAME,UP_NAME,PERIOD
 
-AROONOSC = INDICATOR,NAME,PERIOD
+Aroon Oscillator
+  AROONOSC = INDICATOR,NAME,PERIOD
 
-ASIN = INDICATOR,NAME,INPUT
+Vector Trigonometric ASin
+  ASIN = INDICATOR,NAME,INPUT
 
-ATAN = INDICATOR,NAME,INPUT
+Vector Trigonometric ATan
+  ATAN = INDICATOR,NAME,INPUT
 
-ATR = INDICATOR,NAME,PERIOD
+Average True Range
+  ATR = INDICATOR,NAME,PERIOD
 
-AVGPRICE = INDICATOR,NAME
+Average Price
+  AVGPRICE = INDICATOR,NAME
 
-BARS = INDICATOR,NAME,BAR_UP_COLOR,BAR_DOWN_COLOR,BAR_NEUTRAL_COLOR 
+OHLC Bars
+  BARS = INDICATOR,NAME,BAR_UP_COLOR,BAR_DOWN_COLOR,BAR_NEUTRAL_COLOR 
 
        This will create OHLC bars.
-    
-CANDLES = INDICATOR,NAME,CANDLE_COLOR
 
-          This will create candle bars.
+Candles
+  CANDLES = INDICATOR,NAME,CANDLE_COLOR
 
-BBANDS = INDICATOR,INPUT,NAME_UPPER,NAME_MIDDLE,NAME_LOWER,PERIOD,UPPER_DEVIATION,LOWER_DEVIATION,MA_TYPE
+       This will create candle bars.
 
-BETA = INDICATOR,NAME,INPUT_1,INPUT_2,PERIOD
+Bollinger Bands
+  BBANDS = INDICATOR,INPUT,NAME_UPPER,NAME_MIDDLE,NAME_LOWER,PERIOD,UPPER_DEVIATION,LOWER_DEVIATION,MA_TYPE
 
-BOP = INDICATOR,NAME
+Beta
+  BETA = INDICATOR,NAME,INPUT_1,INPUT_2,PERIOD
 
-CCI = INDICATOR,NAME,PERIOD
+Balance Of Power
+  BOP = INDICATOR,NAME
 
-CDL2CROWS = INDICATOR,NAME
+Commodity Channel Index
+  CCI = INDICATOR,NAME,PERIOD
 
-CDL3BLACKCROWS = INDICATOR,NAME
+Two Crows
+  CDL2CROWS = INDICATOR,NAME
 
-CDL3INSIDE = INDICATOR,NAME
+Three Black Crows
+  CDL3BLACKCROWS = INDICATOR,NAME
 
-CDL3LINESTRIKE = INDICATOR,NAME
+Three Inside Up/Down
+  CDL3INSIDE = INDICATOR,NAME
 
-CDL3OUTSIDE = INDICATOR,NAME
+Three-Line Strike 
+  CDL3LINESTRIKE = INDICATOR,NAME
 
-CDL3STARSINSOUTH = INDICATOR,NAME
+Three Outside Up/Down
+  CDL3OUTSIDE = INDICATOR,NAME
 
-CDL3WHITESOLDIERS = INDICATOR,NAME
+Three Stars In The South
+  CDL3STARSINSOUTH = INDICATOR,NAME
 
-CDLABANDONEDBABY = INDICATOR,NAME,PENETRATION
+Three Advancing White Soldiers
+  CDL3WHITESOLDIERS = INDICATOR,NAME
 
-CDLADVANCEBLOCK = INDICATOR,NAME
+Abandoned Baby
+  CDLABANDONEDBABY = INDICATOR,NAME,PENETRATION
 
-CDLBELTHOLD = INDICATOR,NAME
+Advance Block
+  CDLADVANCEBLOCK = INDICATOR,NAME
 
-CDLBREAKAWAY = INDICATOR,NAME
+Belt-hold
+  CDLBELTHOLD = INDICATOR,NAME
 
-CDLCLOSINGMARUBOZU = INDICATOR,NAME
+Breakaway
+  CDLBREAKAWAY = INDICATOR,NAME
 
-CDLCONCEALBABYSWALL = INDICATOR,NAME
+Closing Marubozu
+  CDLCLOSINGMARUBOZU = INDICATOR,NAME
 
-CDLCOUNTERATTACK = INDICATOR,NAME
+Concealing Baby Swallow
+  CDLCONCEALBABYSWALL = INDICATOR,NAME
 
-CDLDARKCLOUDCOVER = INDICATOR,NAME,PENETRATION
+Counterattack
+  CDLCOUNTERATTACK = INDICATOR,NAME
 
-CDLDOJI = INDICATOR,NAME
+Dark Cloud Cover
+  CDLDARKCLOUDCOVER = INDICATOR,NAME,PENETRATION
 
-CDLDOJISTAR = INDICATOR,NAME
+Doji
+  CDLDOJI = INDICATOR,NAME
 
-CDLDRAGONFLYDOJI = INDICATOR,NAME
+Doji Star
+  CDLDOJISTAR = INDICATOR,NAME
 
-CDLENGULFING = INDICATOR,NAME
+Dragonfly Doji
+  CDLDRAGONFLYDOJI = INDICATOR,NAME
 
-CDLEVENINGDOJISTAR = INDICATOR,NAME,PENETRATION
+Engulfing Pattern
+  CDLENGULFING = INDICATOR,NAME
 
-CDLEVENINGSTAR = INDICATOR,NAME,PENETRATION
+Evening Doji Star
+  CDLEVENINGDOJISTAR = INDICATOR,NAME,PENETRATION
 
-CDLGAPSIDESIDEWHITE = INDICATOR,NAME
+Evening Star
+  CDLEVENINGSTAR = INDICATOR,NAME,PENETRATION
 
-CDLGRAVESTONEDOJI = INDICATOR,NAME
+Up/Down-gap side-by-side white lines
+  CDLGAPSIDESIDEWHITE = INDICATOR,NAME
 
-CDLHAMMER = INDICATOR,NAME
+Gravestone Doji
+  CDLGRAVESTONEDOJI = INDICATOR,NAME
 
-CDLHANGINGMAN = INDICATOR,NAME
+Hammer
+  CDLHAMMER = INDICATOR,NAME
 
-CDLHARAMI = INDICATOR,NAME
+Hanging Man
+  CDLHANGINGMAN = INDICATOR,NAME
 
-CDLHARAMICROSS = INDICATOR,NAME
+Harami Pattern
+  CDLHARAMI = INDICATOR,NAME
 
-CDLHIGHWAVE = INDICATOR,NAME
+Harami Cross Pattern
+  CDLHARAMICROSS = INDICATOR,NAME
 
-CDLHIKKAKE = INDICATOR,NAME
+High-Wave Candle
+  CDLHIGHWAVE = INDICATOR,NAME
 
-CDLHIKKAKEMOD = INDICATOR,NAME
+Hikkake Pattern
+  CDLHIKKAKE = INDICATOR,NAME
 
-CDLHOMINGPIGEON = INDICATOR,NAME
+Modified Hikkake Pattern
+  CDLHIKKAKEMOD = INDICATOR,NAME
 
-CDLIDENTICAL3CROWS = INDICATOR,NAME
+Homing Pigeon
+  CDLHOMINGPIGEON = INDICATOR,NAME
 
-CDLINNECK = INDICATOR,NAME
+Identical Three Crows
+  CDLIDENTICAL3CROWS = INDICATOR,NAME
 
-CDLINVERTEDHAMMER = INDICATOR,NAME
+In-Neck Pattern
+  CDLINNECK = INDICATOR,NAME
 
-CDLKICKING = INDICATOR,NAME
+Inverted Hammer
+  CDLINVERTEDHAMMER = INDICATOR,NAME
 
-CDLKICKINGBYLENGTH = INDICATOR,NAME
+Kicking
+  CDLKICKING = INDICATOR,NAME
 
-CDLLADDERBOTTOM = INDICATOR,NAME
+Kicking - bull/bear determined by the longer marubozu
+  CDLKICKINGBYLENGTH = INDICATOR,NAME
 
-CDLLONGLEGGEDDOJI = INDICATOR,NAME
+Ladder Bottom
+  CDLLADDERBOTTOM = INDICATOR,NAME
 
-CDLLONGLINE = INDICATOR,NAME
+Long Legged Doji
+  CDLLONGLEGGEDDOJI = INDICATOR,NAME
 
-CDLMARUBOZU = INDICATOR,NAME
+Long Line Candle
+  CDLLONGLINE = INDICATOR,NAME
 
-CDLMATCHINGLOW = INDICATOR,NAME
+Marubozu
+  CDLMARUBOZU = INDICATOR,NAME
 
-CDLMATHOLD = INDICATOR,NAME,PENETRATION
+Matching Low
+  CDLMATCHINGLOW = INDICATOR,NAME
 
-CDLMORNINGDOJISTAR = INDICATOR,NAME,PENETRATION
+Mat Hold
+  CDLMATHOLD = INDICATOR,NAME,PENETRATION
 
-CDLMORNINGSTAR = INDICATOR,NAME,PENETRATION
+Morning Doji Star
+  CDLMORNINGDOJISTAR = INDICATOR,NAME,PENETRATION
 
-CDLONNECK = INDICATOR,NAME
+Morning Star
+  CDLMORNINGSTAR = INDICATOR,NAME,PENETRATION
 
-CDLPIERCING = INDICATOR,NAME
+On-Neck Pattern
+  CDLONNECK = INDICATOR,NAME
 
-CDLRICKSHAWMAN = INDICATOR,NAME
+Piercing Pattern
+  CDLPIERCING = INDICATOR,NAME
 
-CDLRISEFALL3METHODS = INDICATOR,NAME
+Rickshaw Man
+  CDLRICKSHAWMAN = INDICATOR,NAME
 
-CDLSEPARATINGLINES = INDICATOR,NAME
+Rising/Falling Three Methods
+  CDLRISEFALL3METHODS = INDICATOR,NAME
 
-CDLSHOOTINGSTAR = INDICATOR,NAME
+Separating Lines
+  CDLSEPARATINGLINES = INDICATOR,NAME
 
-CDLSHORTLINE = INDICATOR,NAME
+Shooting Star
+  CDLSHOOTINGSTAR = INDICATOR,NAME
 
-CDLSPINNINGTOP = INDICATOR,NAME
+Short Line Candle
+  CDLSHORTLINE = INDICATOR,NAME
 
-CDLSTALLEDPATTERN = INDICATOR,NAME
+Spinning Top
+  CDLSPINNINGTOP = INDICATOR,NAME
 
-CDLSTICKSANDWICH = INDICATOR,NAME
+Stalled Pattern
+  CDLSTALLEDPATTERN = INDICATOR,NAME
 
-CDLTAKURI = INDICATOR,NAME
+Stick Sandwich
+  CDLSTICKSANDWICH = INDICATOR,NAME
 
-CDLTASUKIGAP = INDICATOR,NAME
+Takuri (Dragonfly Doji with very long lower shadow)
+  CDLTAKURI = INDICATOR,NAME
 
-CDLTHRUSTING = INDICATOR,NAME
+Tasuki Gap
+  CDLTASUKIGAP = INDICATOR,NAME
 
-CDLTRISTAR = INDICATOR,NAME
+Thrusting Pattern
+  CDLTHRUSTING = INDICATOR,NAME
 
-CDLUNIQUE3RIVER = INDICATOR,NAME
+Tristar Pattern
+  CDLTRISTAR = INDICATOR,NAME
 
-CDLUPSIDEGAP2CROWS = INDICATOR,NAME
+Unique 3 River
+  CDLUNIQUE3RIVER = INDICATOR,NAME
 
-CDLXSIDEGAP3METHODS = INDICATOR,NAME
+Upside Gap Two Crows
+  CDLUPSIDEGAP2CROWS = INDICATOR,NAME
 
-CEIL = INDICATOR,NAME,INPUT
+Upside/Downside Gap Three Methods
+  CDLXSIDEGAP3METHODS = INDICATOR,NAME
 
-CMO = INDICATOR,NAME,INPUT,PERIOD
+Vector Ceil
+  CEIL = INDICATOR,NAME,INPUT
+
+Chande Momentum Oscillator
+  CMO = INDICATOR,NAME,INPUT,PERIOD
 
 COLOR = INDICATOR,INPUT,INPUT_2,VALUE,COLOR
 
@@ -207,164 +305,235 @@ COLOR = INDICATOR,INPUT,INPUT_2,VALUE,COLOR
 COMPARE = INDICATOR,NAME,INPUT_1,INPUT_2,OPERATOR
 
     This function compares the values of INPUT_1 data array with INPUT_2 data array using the OPERATOR for comparison.
-    The result is a boolean array of TRUE/FALSE values.
+    The result is a boolean array of TRUE/FALSE values. The comparison order is made INPUT_1 OPERATOR INPUT_2.
 
 COMPARE2 = INDICATOR,NAME,INPUT,VALUE,OPERATOR
 
     This function compares the values of INPUT_1 data array with the number VALUE using the OPERATOR for comparison.
-    The result is a boolean array of TRUE/FALSE values.
+    The result is a boolean array of TRUE/FALSE values.  The comparison order is made INPUT_1 OPERATOR VALUE.
 
-CORREL = INDICATOR,NAME,INPUT_1,INPUT_2,PERIOD
+Pearson's Correlation Coefficient (r)
+  CORREL = INDICATOR,NAME,INPUT_1,INPUT_2,PERIOD
 
-COS = INDICATOR,NAME,INPUT
+Vector Trigonometric Cos
+  COS = INDICATOR,NAME,INPUT
 
-COSH = INDICATOR,NAME,INPUT
+Vector Trigonometric Cosh
+  COSH = INDICATOR,NAME,INPUT
 
-DIV = INDICATOR,NAME,INPUT_1,INPUT_2
+Vector Arithmetic Div
+  DIV = INDICATOR,NAME,INPUT_1,INPUT_2
 
-DX = INDICATOR,NAME,PERIOD
+Directional Movement Index
+  DX = INDICATOR,NAME,PERIOD
 
-EXP = INDICATOR,NAME,INPUT
+Vector Arithmetic Exp
+  EXP = INDICATOR,NAME,INPUT
 
-FLOOR = INDICATOR,NAME,INPUT
+Vector Floor
+  FLOOR = INDICATOR,NAME,INPUT
 
-HT_DCPERIOD = INDICATOR,NAME,INPUT
+Hilbert Transform - Dominant Cycle Period
+  HT_DCPERIOD = INDICATOR,NAME,INPUT
 
-HT_DCPHASE = INDICATOR,NAME,INPUT
+Hilbert Transform - Dominant Cycle Phase
+  HT_DCPHASE = INDICATOR,NAME,INPUT
 
-HT_PHASOR = INDICATOR,INPUT,NAME_PHASE,NAME_QUADRATURE
+Hilbert Transform - Phasor Components
+  HT_PHASOR = INDICATOR,INPUT,NAME_PHASE,NAME_QUADRATURE
 
-HT_SINE = INDICATOR,INPUT,NAME_SINE,NAME_LEAD_SINE
+Hilbert Transform - SineWave
+  HT_SINE = INDICATOR,INPUT,NAME_SINE,NAME_LEAD_SINE
 
-HT_TRENDLINE = INDICATOR,NAME,INPUT
+Hilbert Transform - Instantaneous Trendline
+  HT_TRENDLINE = INDICATOR,NAME,INPUT
 
-HT_TRENDMODE = INDICATOR,NAME,INPUT
+Hilbert Transform - Trend vs Cycle Mode
+  HT_TRENDMODE = INDICATOR,NAME,INPUT
 
-LINEARREG = INDICATOR,NAME,INPUT,PERIOD
+Linear Regression
+  LINEARREG = INDICATOR,NAME,INPUT,PERIOD
 
-LINEARREG_ANGLE = INDICATOR,NAME,INPUT,PERIOD
+Linear Regression Angle
+  LINEARREG_ANGLE = INDICATOR,NAME,INPUT,PERIOD
 
-LINEARREG_INTERCEPT = INDICATOR,NAME,INPUT,PERIOD
+Linear Regression Intercept
+  LINEARREG_INTERCEPT = INDICATOR,NAME,INPUT,PERIOD
 
-LINEARREG_SLOPE = INDICATOR,NAME,INPUT,PERIOD
+Linear Regression Slope
+  LINEARREG_SLOPE = INDICATOR,NAME,INPUT,PERIOD
 
-LN = INDICATOR,NAME,INPUT
+Vector Log Natural
+  LN = INDICATOR,NAME,INPUT
 
-LOG10 = INDICATOR,NAME,INPUT
+Vector Log10
+  LOG10 = INDICATOR,NAME,INPUT
 
-MA = INDICATOR,NAME,INPUT,PERIOD,MA_TYPE
+Moving average
+  MA = INDICATOR,NAME,INPUT,PERIOD,MA_TYPE
 
       MA types are SMA,EMA,WMA,DEMA,TEMA,TRIMA,KAMA,MAMA,T3
 
-MACD = INDICATOR,INPUT,NAME_MACD,NAME_SIGNAL,NAME_HIST,FAST_PERIOD,SLOW_PERIOD,SIGNAL_PERIOD
+Moving Average Convergence/Divergence
+  MACD = INDICATOR,INPUT,NAME_MACD,NAME_SIGNAL,NAME_HIST,FAST_PERIOD,SLOW_PERIOD,SIGNAL_PERIOD
 
-MACDEXT = INDICATOR,INPUT,NAME_MACD,NAME_SIGNAL,NAME_HIST,FAST_PERIOD,FAST_MA_TYPE,SLOW_PERIOD,SLOW_MA_TYPE,SIGNAL_PERIOD,SIGNAL_MA_TYPE
+MACD with controllable MA type
+  MACDEXT = INDICATOR,INPUT,NAME_MACD,NAME_SIGNAL,NAME_HIST,FAST_PERIOD,FAST_MA_TYPE,SLOW_PERIOD,SLOW_MA_TYPE,SIGNAL_PERIOD,SIGNAL_MA_TYPE
 
-MACDFIX = INDICATOR,INPUT,NAME_MACD,NAME_SIGNAL,NAME_HIST,SIGNAL_PERIOD
+Moving Average Convergence/Divergence Fix 12/26
+  MACDFIX = INDICATOR,INPUT,NAME_MACD,NAME_SIGNAL,NAME_HIST,SIGNAL_PERIOD
 
-MAVP = INDICATOR,NAME,INPUT_1,INPUT_2,MIN_PERIOD,MAX_PERIOD,MA_TYPE
+Moving average with variable period
+  MAVP = INDICATOR,NAME,INPUT_1,INPUT_2,MIN_PERIOD,MAX_PERIOD,MA_TYPE
 
-MAX = INDICATOR,NAME,INPUT,PERIOD
+Highest value over a specified period
+  MAX = INDICATOR,NAME,INPUT,PERIOD
 
-MAXINDEX = INDICATOR,NAME,INPUT,PERIOD
+Index of highest value over a specified period
+  MAXINDEX = INDICATOR,NAME,INPUT,PERIOD
 
-MEDPRICE = INDICATOR,NAME
+Median Price
+  MEDPRICE = INDICATOR,NAME
 
-MFI = INDICATOR,NAME,PERIOD
+Money Flow Index
+  MFI = INDICATOR,NAME,PERIOD
 
-MIDPOINT = INDICATOR,NAME,INPUT,PERIOD
+MidPoint over period
+  MIDPOINT = INDICATOR,NAME,INPUT,PERIOD
 
-MIDPRICE = INDICATOR,NAME,PERIOD
+Midpoint Price over period
+  MIDPRICE = INDICATOR,NAME,PERIOD
 
-MIN = INDICATOR,NAME,INPUT,PERIOD
+Lowest value over a specified period
+  MIN = INDICATOR,NAME,INPUT,PERIOD
 
-MININDEX = INDICATOR,NAME,INPUT,PERIOD
+Index of lowest value over a specified period
+  MININDEX = INDICATOR,NAME,INPUT,PERIOD
 
-MINMAX = INDICATOR,INPUT,NAME_MIN,NAME_MAX,PERIOD
+Lowest and highest values over a specified period
+  MINMAX = INDICATOR,INPUT,NAME_MIN,NAME_MAX,PERIOD
 
-MINMAXINDEX = INDICATOR,INPUT,NAME_MIN,NAME_MAX,PERIOD
+Indexes of lowest and highest values over a specified period
+  MINMAXINDEX = INDICATOR,INPUT,NAME_MIN,NAME_MAX,PERIOD
 
-MINUS_DI = INDICATOR,NAME,PERIOD
+Minus Directional Indicator
+  MINUS_DI = INDICATOR,NAME,PERIOD
 
-MINUS_DM = INDICATOR,NAME,PERIOD
+Minus Directional Movement
+  MINUS_DM = INDICATOR,NAME,PERIOD
 
-MOM = INDICATOR,NAME,INPUT,PERIOD
+Momentum
+  MOM = INDICATOR,NAME,INPUT,PERIOD
 
-MULT = INDICATOR,NAME,INPUT_1,INPUT_2
+Vector Arithmetic Mult
+  MULT = INDICATOR,NAME,INPUT_1,INPUT_2
 
-NATR = INDICATOR,NAME,PERIOD
+Normalized Average True Range
+  NATR = INDICATOR,NAME,PERIOD
 
-NORMAL = INDICATOR,NAME,INPUT
+Normalize
+  NORMAL = INDICATOR,NAME,INPUT
 
     This funtion normalizes the values found in INPUT data array. That is, scales all numbers to values
     between 0 and 100. Useful for plotting wildly different values together on the same chart. Also
     useful for comparing multiple datasets of different value ranges.
 
-OBV = INDICATOR,NAME,INPUT
+On Balance Volume
+  OBV = INDICATOR,NAME,INPUT
 
-PLUS_DI = INDICATOR,NAME,PERIOD
+Plus Directional Indicator
+  PLUS_DI = INDICATOR,NAME,PERIOD
 
-PLUS_DM = INDICATOR,NAME,PERIOD
+Plus Directional Movement
+  PLUS_DM = INDICATOR,NAME,PERIOD
 
-PPO = INDICATOR,NAME,INPUT,FAST_PERIOD,SLOW_PERIOD,MA_TYPE
+Percentage Price Oscillator
+  PPO = INDICATOR,NAME,INPUT,FAST_PERIOD,SLOW_PERIOD,MA_TYPE
 
 REF = INDICATOR,NAME,INPUT,PERIOD
 
-ROC = INDICATOR,NAME,INPUT,PERIOD
+    This function creates a dataset that is INPUT - PERIOD offset. So, if you wanted to create a dataset of yesterday's close
+    values the string would be 'REF,yclose,Close,1'  If you just wanted the today's Close then PERIOD would be '0'
 
-ROCP = INDICATOR,NAME,INPUT,PERIOD
+Rate of change : ((price/prevPrice)-1)*100
+  ROC = INDICATOR,NAME,INPUT,PERIOD
 
-ROCR = INDICATOR,NAME,INPUT,PERIOD
+Rate of change Percentage: (price-prevPrice)/prevPrice
+  ROCP = INDICATOR,NAME,INPUT,PERIOD
 
-ROCR100 = INDICATOR,NAME,INPUT,PERIOD
+Rate of change ratio: (price/prevPrice)
+  ROCR = INDICATOR,NAME,INPUT,PERIOD
 
-RSI = INDICATOR,NAME,INPUT,PERIOD
+Rate of change ratio 100 scale: (price/prevPrice)*100
+  ROCR100 = INDICATOR,NAME,INPUT,PERIOD
 
-SAR = INDICATOR,NAME,ACCELERATION,MAXIMUM
+Relative Strength Index
+  RSI = INDICATOR,NAME,INPUT,PERIOD
 
-      ACCELERATION and MAXIMUM are decimal values.
+Parabolic SAR
+  SAR = INDICATOR,NAME,ACCELERATION,MAXIMUM
+  ACCELERATION and MAXIMUM are decimal values.
 
-SAREXT = INDICATOR,NAME,START,OFFSET_REVERSE,ACCEL_INIT_LONG,ACCEL_LONG,ACCEL_MAX_LONG,ACCEL_INIT_SHORT,ACCEL_SHORT,ACCEL_MAX_SHORT
+Parabolic SAR - Extended
+  SAREXT = INDICATOR,NAME,START,OFFSET_REVERSE,ACCEL_INIT_LONG,ACCEL_LONG,ACCEL_MAX_LONG,ACCEL_INIT_SHORT,ACCEL_SHORT,ACCEL_MAX_SHORT
+  All values are decimals.
 
-	 All values are decimals.
+Vector Trigonometric Sin
+  SIN = INDICATOR,NAME,INPUT
 
-SIN = INDICATOR,NAME,INPUT
+Vector Trigonometric Sinh
+  SINH = INDICATOR,NAME,INPUT
 
-SINH = INDICATOR,NAME,INPUT
+Vector Square Root
+  SQRT = INDICATOR,NAME,INPUT
 
-SQRT = INDICATOR,NAME,INPUT
+Standard Deviation
+  STDDEV = INDICATOR,NAME,INPUT,PERIOD,DEVIATION
 
-STDDEV = INDICATOR,NAME,INPUT,PERIOD,DEVIATION
+Stochastic
+  STOCH = INDICATOR,NAME_SLOWK,NAME_SLOWD,FASTK_PERIOD,SLOWK_PERIOD,SLOWK_MA_TYPE,SLOWD_PERIOD,SLOWD_MA_TYPE
 
-STOCH = INDICATOR,NAME_SLOWK,NAME_SLOWD,FASTK_PERIOD,SLOWK_PERIOD,SLOWK_MA_TYPE,SLOWD_PERIOD,SLOWD_MA_TYPE
+Stochastic Fast
+  STOCHF = INDICATOR,NAME_FASTK,NAME_FASTD,FASTK_PERIOD,FASTD_PERIOD,FASTD_MA_TYPE
 
-STOCHF = INDICATOR,NAME_FASTK,NAME_FASTD,FASTK_PERIOD,FASTD_PERIOD,FASTD_MA_TYPE
+Stochastic Relative Strength Index
+  STOCHRSI = INDICATOR,INPUT,NAME_FASTK,NAME_FASTD,PERIOD,FASTK_PERIOD,FASTD_PERIOD,FASTD_MA_TYPE
 
-STOCHRSI = INDICATOR,INPUT,NAME_FASTK,NAME_FASTD,PERIOD,FASTK_PERIOD,FASTD_PERIOD,FASTD_MA_TYPE
+Vector Arithmetic Substraction
+  SUB = INDICATOR,NAME,INPUT_1,INPUT_2
 
-SUB = INDICATOR,NAME,INPUT_1,INPUT_2
+Summation
+  SUM = INDICATOR,NAME,INPUT,PERIOD
 
-SUM = INDICATOR,NAME,INPUT,PERIOD
+Vector Trigonometric Tan
+  TAN = INDICATOR,NAME,INPUT
 
-TAN = INDICATOR,NAME,INPUT
+Vector Trigonometric Tanh
+  TANH = INDICATOR,NAME,INPUT
 
-TANH = INDICATOR,NAME,INPUT
+True Range
+  TRANGE = INDICATOR,NAME
 
-TRANGE = INDICATOR,NAME
+TRIX - 1-day Rate-Of-Change (ROC) of a Triple Smooth EMA
+  TRIX = INDICATOR,NAME,INPUT,PERIOD
 
-TRIX = INDICATOR,NAME,INPUT,PERIOD
+Time Series Forecast
+  TSF = INDICATOR,NAME,INPUT,PERIOD
 
-TSF = INDICATOR,NAME,INPUT,PERIOD
+Typical Price
+  TYPPRICE = INDICATOR,NAME
 
-TYPPRICE = INDICATOR,NAME
+Ultimate Oscillator
+  ULTOSC = INDICATOR,NAME,PERIOD_1,PERIOD_2,PERIOD_3
 
-ULTOSC = INDICATOR,NAME,PERIOD_1,PERIOD_2,PERIOD_3
+Variance
+  VAR = INDICATOR,NAME,INPUT,PERIOD,DEVIATION
 
-VAR = INDICATOR,NAME,INPUT,PERIOD,DEVIATION
+Weighted Close Price
+  WCLPRICE = INDICATOR,NAME
 
-WCLPRICE = INDICATOR,NAME
-
-WILLR = INDICATOR,NAME,PERIOD
+Williams' %R
+  WILLR = INDICATOR,NAME,PERIOD
 
 
 
