@@ -40,7 +40,7 @@ class ChartPage : public QWidget
 
   signals:
     void fileSelected (QString);
-    void signalAddToGroup (QString);
+    void signalAddToGroup ();
     void signalReloadChart ();
     void addRecentChart (QString);
 
